[gd_scene load_steps=22 format=3 uid="uid://cob2bii56u5iu"]

[ext_resource type="Script" uid="uid://t4bfyssmkqx2" path="res://Scripts/ability_select_right.gd" id="1_kwluk"]
[ext_resource type="Texture2D" uid="uid://bhetiiieh1ov2" path="res://Assets/StartMenuArt/AbilityMenuLeft/AbilityMenuLeftSlot1.png" id="2_wt2ys"]
[ext_resource type="Texture2D" uid="uid://n7hereg4vwj2" path="res://Assets/StartMenuArt/AbilityButtonRight1/HDashRightDefault.png" id="3_swt44"]
[ext_resource type="Texture2D" uid="uid://xi1xh72e37vc" path="res://Assets/StartMenuArt/AbilityButtonRight1/HDashRightPress.png" id="4_m1mkn"]
[ext_resource type="Texture2D" uid="uid://30puq5acfch6" path="res://Assets/StartMenuArt/AbilityButtonRight1/HDashRightHover.png" id="5_436rt"]
[ext_resource type="Texture2D" uid="uid://can2hg5jhty5b" path="res://Assets/StartMenuArt/AbilityButtonRight2/VDashRightDefault.png" id="6_aoy85"]
[ext_resource type="Texture2D" uid="uid://dysedetaid1rc" path="res://Assets/StartMenuArt/AbilityButtonRight2/VDashRightPress.png" id="7_1rcev"]
[ext_resource type="Texture2D" uid="uid://bb8punuek1plq" path="res://Assets/StartMenuArt/AbilityButtonRight2/VDashRightHover.png" id="8_76115"]
[ext_resource type="Texture2D" uid="uid://dxwgcjb5mw8e0" path="res://Assets/StartMenuArt/AbilityButtonRight3/FrictionlessRightDefault.png" id="9_v3mnb"]
[ext_resource type="Texture2D" uid="uid://ndpmrnk3p577" path="res://Assets/StartMenuArt/AbilityButtonRight3/FrictionlessRightPress.png" id="10_jir6o"]
[ext_resource type="Texture2D" uid="uid://ir0yyg0fd2ev" path="res://Assets/StartMenuArt/AbilityButtonRight3/FrictionlessRightHover.png" id="11_e3n2q"]
[ext_resource type="Texture2D" uid="uid://dwmj7utvoyvda" path="res://Assets/StartMenuArt/AbilityButtonRight4/GrappleRightDefault.png" id="12_m2b6f"]
[ext_resource type="Texture2D" uid="uid://w1jqtpnur6h" path="res://Assets/StartMenuArt/AbilityButtonRight4/GrappleRightPress.png" id="13_78ulv"]
[ext_resource type="Texture2D" uid="uid://d2lccsx61x2da" path="res://Assets/StartMenuArt/AbilityButtonRight4/GrappleRightHover.png" id="14_0gb5e"]
[ext_resource type="Texture2D" uid="uid://c4pkojcmknq8y" path="res://Assets/StartMenuArt/AbilityButtonRight5/SlingshotRightDefault.png" id="15_btygw"]
[ext_resource type="Texture2D" uid="uid://cfs26uddq4tae" path="res://Assets/StartMenuArt/LockRight.png" id="15_v3mnb"]
[ext_resource type="Texture2D" uid="uid://c12ue5r8l2h8l" path="res://Assets/StartMenuArt/AbilityButtonRight5/SlingshotRightPress.png" id="16_k12u8"]
[ext_resource type="Texture2D" uid="uid://bnrpup8xoi10l" path="res://Assets/StartMenuArt/AbilityButtonRight5/SlingshotRightHover.png" id="17_ubq4h"]
[ext_resource type="Texture2D" uid="uid://bnhxxbqcg51ij" path="res://Assets/StartMenuArt/AbilityButtonRight6/SpikeRightDefault.png" id="18_s5hu8"]
[ext_resource type="Texture2D" uid="uid://diofxc6408q3c" path="res://Assets/StartMenuArt/AbilityButtonRight6/SpikeRightPress.png" id="19_fsuk8"]
[ext_resource type="Texture2D" uid="uid://cq8rq2pwl7lml" path="res://Assets/StartMenuArt/AbilityButtonRight6/SpikeRightHover.png" id="20_e0ufo"]

[node name="ability_select_right" type="Control"]
layout_mode = 3
anchor_right = 0.371
anchor_bottom = 0.477
offset_right = -0.320068
offset_bottom = -0.400024
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kwluk")
player_index = 1

[node name="AbilityMenuRight" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 712.0
offset_bottom = 572.0
texture = ExtResource("2_wt2ys")

[node name="VBoxContainer" type="VBoxContainer" parent="AbilityMenuRight"]
layout_mode = 0
offset_left = 48.0
offset_top = 66.0
offset_right = 664.0
offset_bottom = 537.0

[node name="AbilityRow1" type="HBoxContainer" parent="AbilityMenuRight/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="Ability1" type="TextureButton" parent="AbilityMenuRight/VBoxContainer/AbilityRow1"]
custom_minimum_size = Vector2(142, 0)
layout_mode = 2
size_flags_horizontal = 2
texture_normal = ExtResource("3_swt44")
texture_pressed = ExtResource("4_m1mkn")
texture_hover = ExtResource("5_436rt")

[node name="Ability2" type="TextureButton" parent="AbilityMenuRight/VBoxContainer/AbilityRow1"]
custom_minimum_size = Vector2(142, 0)
layout_mode = 2
size_flags_horizontal = 2
texture_normal = ExtResource("6_aoy85")
texture_pressed = ExtResource("7_1rcev")
texture_hover = ExtResource("8_76115")

[node name="Ability3" type="TextureButton" parent="AbilityMenuRight/VBoxContainer/AbilityRow1"]
custom_minimum_size = Vector2(142, 0)
layout_mode = 2
size_flags_horizontal = 2
texture_normal = ExtResource("9_v3mnb")
texture_pressed = ExtResource("10_jir6o")
texture_hover = ExtResource("11_e3n2q")

[node name="Ability4" type="TextureButton" parent="AbilityMenuRight/VBoxContainer/AbilityRow1"]
custom_minimum_size = Vector2(142, 0)
layout_mode = 2
texture_normal = ExtResource("12_m2b6f")
texture_pressed = ExtResource("13_78ulv")
texture_hover = ExtResource("14_0gb5e")
ignore_texture_size = true

[node name="AbilityRow2" type="HBoxContainer" parent="AbilityMenuRight/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="Ability5" type="TextureButton" parent="AbilityMenuRight/VBoxContainer/AbilityRow2"]
custom_minimum_size = Vector2(142, 0)
layout_mode = 2
size_flags_horizontal = 2
texture_normal = ExtResource("15_btygw")
texture_pressed = ExtResource("16_k12u8")
texture_hover = ExtResource("17_ubq4h")

[node name="Ability6" type="TextureButton" parent="AbilityMenuRight/VBoxContainer/AbilityRow2"]
custom_minimum_size = Vector2(142, 0)
layout_mode = 2
size_flags_horizontal = 2
texture_normal = ExtResource("18_s5hu8")
texture_pressed = ExtResource("19_fsuk8")
texture_hover = ExtResource("20_e0ufo")

[node name="Ability7" type="TextureButton" parent="AbilityMenuRight/VBoxContainer/AbilityRow2"]
custom_minimum_size = Vector2(142, 0)
layout_mode = 2
size_flags_horizontal = 2
texture_normal = ExtResource("15_v3mnb")

[node name="Ability8" type="TextureButton" parent="AbilityMenuRight/VBoxContainer/AbilityRow2"]
custom_minimum_size = Vector2(142, 0)
layout_mode = 2
texture_normal = ExtResource("15_v3mnb")
ignore_texture_size = true

[node name="AbilityRow3" type="HBoxContainer" parent="AbilityMenuRight/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="Ability9" type="TextureButton" parent="AbilityMenuRight/VBoxContainer/AbilityRow3"]
custom_minimum_size = Vector2(142, 0)
layout_mode = 2
size_flags_horizontal = 2
texture_normal = ExtResource("15_v3mnb")

[node name="Ability10" type="TextureButton" parent="AbilityMenuRight/VBoxContainer/AbilityRow3"]
custom_minimum_size = Vector2(142, 0)
layout_mode = 2
size_flags_horizontal = 2
texture_normal = ExtResource("15_v3mnb")

[node name="Ability11" type="TextureButton" parent="AbilityMenuRight/VBoxContainer/AbilityRow3"]
custom_minimum_size = Vector2(142, 0)
layout_mode = 2
size_flags_horizontal = 2
texture_normal = ExtResource("15_v3mnb")

[node name="Ability12" type="TextureButton" parent="AbilityMenuRight/VBoxContainer/AbilityRow3"]
custom_minimum_size = Vector2(142, 0)
layout_mode = 2
texture_normal = ExtResource("15_v3mnb")
ignore_texture_size = true

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="AbilityMenuRight/VBoxContainer/AbilityRow1/Ability1" to="." method="_on_ability_1_pressed"]
[connection signal="pressed" from="AbilityMenuRight/VBoxContainer/AbilityRow1/Ability2" to="." method="_on_ability_2_pressed"]
[connection signal="pressed" from="AbilityMenuRight/VBoxContainer/AbilityRow1/Ability3" to="." method="_on_ability_3_pressed"]
[connection signal="pressed" from="AbilityMenuRight/VBoxContainer/AbilityRow1/Ability4" to="." method="_on_ability_4_pressed"]
[connection signal="pressed" from="AbilityMenuRight/VBoxContainer/AbilityRow2/Ability5" to="." method="_on_ability_5_pressed"]
[connection signal="pressed" from="AbilityMenuRight/VBoxContainer/AbilityRow2/Ability6" to="." method="_on_ability_6_pressed"]
